[package]
edition = "2018"
name = "boj_rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
scraper = "0.12.0"
syntect = "4.4"
tokio = {version = "1", features = ["full"]}
